@@ -1,4 +1,7 @@
 
+ o new module Topological.Make_stable to iterate over a graph in a **stable**
+   topological order. Stable means that the provided ordering only depends on
+   the graph topology and on the user's vertices ordering.
  o new module Leaderlist to compute the leader list algorithm (see the Dragon)
    (contributed by Markus W. Weissmann <markus.weissmann@in.tum.de>)
 
